--- a/addons/fitlytics/finnito/fitlytics-module/resources/views/pages/home.twig
+++ b/addons/fitlytics/finnito/fitlytics-module/resources/views/pages/home.twig
@@ -218,48 +218,47 @@
                         <p>
                         {% if notes[num+1][0].injured.isTrue() %}
                             <span class="tag t5">Injured</span>
-                        {% else %}
-                            <span class="tag t1">Not Injured</span>
                         {% endif %}
 
                         {% if notes[num+1][0].sick.isTrue() %}
                             <span class="tag t5">Sick</span>
-                        {% else %}
-                            <span class="tag t1">Not Sick</span>
                         {% endif %}
 
-                        {% if notes[num+1][0].sleep_quality == "5" %}
-                            {% set sleepType = "t1" %}
-                        {% elseif notes[num+1][0].sleep_quality == "4" %}
-                            {% set sleepType = "t2" %}
-                        {% elseif notes[num+1][0].sleep_quality == "3" %}
-                            {% set sleepType = "t3" %}
-                        {% elseif notes[num+1][0].sleep_quality == "2" %}
-                            {% set sleepType = "t4" %}
-                        {% elseif notes[num+1][0].sleep_quality == "1" %}
-                            {% set sleepType = "t5" %}
-                        {% else %}
-                            {% set sleepType = "t3" %}
+                        {% if notes[num+1][0].sleep_quality is not empty %}
+                            {% if notes[num+1][0].sleep_quality == "5" %}
+                                {% set sleepType = "t1" %}
+                            {% elseif notes[num+1][0].sleep_quality == "4" %}
+                                {% set sleepType = "t2" %}
+                            {% elseif notes[num+1][0].sleep_quality == "3" %}
+                                {% set sleepType = "t3" %}
+                            {% elseif notes[num+1][0].sleep_quality == "2" %}
+                                {% set sleepType = "t4" %}
+                            {% elseif notes[num+1][0].sleep_quality == "1" %}
+                                {% set sleepType = "t5" %}
+                            {% else %}
+                                {% set sleepType = "t3" %}
+                            {% endif %}
+                            <span class="tag {{ sleepType }}">Sleep {{ notes[num+1][0].sleep_quality }}/5</span>
                         {% endif %}
 
-                        {% if notes[num+1][0].stress_level == "1" %}
-                            {% set stressType = "t1" %}
-                        {% elseif notes[num+1][0].stress_level == "2" %}
-                            {% set stressType = "t2" %}
-                        {% elseif notes[num+1][0].stress_level == "3" %}
-                            {% set stressType = "t3" %}
-                        {% elseif notes[num+1][0].stress_level == "4" %}
-                            {% set stressType = "t4" %}
-                        {% elseif notes[num+1][0].stress_level == "5" %}
-                            {% set stressType = "t5" %}
-                        {% else %}
-                            {% set stressType= "t3" %}
+                        {% if notes[num+1][0].stress_level is not empty %}
+                            {% if notes[num+1][0].stress_level == "1" %}
+                                {% set stressType = "t1" %}
+                            {% elseif notes[num+1][0].stress_level == "2" %}
+                                {% set stressType = "t2" %}
+                            {% elseif notes[num+1][0].stress_level == "3" %}
+                                {% set stressType = "t3" %}
+                            {% elseif notes[num+1][0].stress_level == "4" %}
+                                {% set stressType = "t4" %}
+                            {% elseif notes[num+1][0].stress_level == "5" %}
+                                {% set stressType = "t5" %}
+                            {% else %}
+                                {% set stressType= "t3" %}
+                            {% endif %}
+                            <span class="tag {{ stressType }}">Stress {{ notes[num+1][0].stress_level}}/5</span>
                         {% endif %}
 
-                        <span class="tag {{ sleepType }}">Sleep {{ notes[num+1][0].sleep_quality }}/5</span>
-                        <span class="tag {{ stressType }}">Stress {{ notes[num+1][0].stress_level}}/5</span>
-                        <br>
-                        {{ notes[num+1][0].htmlNote()|raw }}</p>
+                        <br>{{ notes[num+1][0].htmlNote()|raw }}</p>
                     {% endif%}
                     </div>
                 </div>
