Improvements to the HR zones settings page

--- a/addons/fitlytics/finnito/fitlytics-module/resources/views/pages/hr_zones.twig
+++ b/addons/fitlytics/finnito/fitlytics-module/resources/views/pages/hr_zones.twig
@@ -23,6 +23,7 @@
         <label for="{{ field.field }}">{{ field.label }} ({{ field.instructions }})</label>
         {{ field.input|raw }}
     {% endfor %}
+    {{ form.actions|raw }}
     {{ form.close()|raw }}
 
     <script>
