--- a/addons/fitlytics/finnito/fitlytics-module/resources/views/pages/settings.twig
+++ b/addons/fitlytics/finnito/fitlytics-module/resources/views/pages/settings.twig
@@ -1,13 +1,5 @@
 {% extends "finnito.theme.fitlytics::layouts.default" %}
 
-{% block subtitle %}
-    Settings
-{% endblock %}
-
-{% block week %}
-
-{% endblock %}
-
 {% block content %}
-{{ form('user_form') }}
+<a href="/settings/heartrate-zones/">Heartrate Zones</a>
 {% endblock %}
