--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,445 +1,1 @@
-html, body {
-    font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Ubuntu, roboto, noto, arial, sans-serif;
-}
-
-h1 {
-    margin-bottom: 0;
-}
-
-table {
-    border-collapse: collapse;
-}
-
-thead {
-    /*margin: 1rem auto 0 auto;*/
-    padding: 0.25rem 0.5rem;
-    background-color: rgba(60, 99, 130,1.0);
-    display: block;
-    color: white;
-    /*border-radius: 0.25rem;*/
-}
-
-.table-wrapper {
-    max-width: 100%;
-    overflow-x: auto;
-}
-
-thead > tr > th {
-    margin: auto;
-    text-align: center;
-    padding: 0.25rem 0.5rem;
-}
-
-td { vertical-align: middle; }
-
-td {
-    padding: 0 0.5rem;
-}
-
-.outer-table > tbody,
-.outer-table > tbody > tr {
-    display: block;
-}
-
-.activities tbody tr td:last-of-type {
-    min-width: 45px;
-    max-width: 50px;
-}
-
-.activities tbody tr td:first-of-type {
-    min-width: 100px;
-}
-
-.activities tbody tr td:not(:first-of-type):not(:last-of-type) {
-    min-width: 85px;
-    text-align: center;
-}
-
-footer {
-    margin-top: 1rem;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    border-top: 1px solid lightgray;
-}
-
-.activities {
-    padding-left: 0;
-}
-
-.flex-apart {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.column-to-row {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    align-items: center;
-}
-
-/*td:first-of-type { padding-right: 0.5rem; }*/
-
-.outer-table table {
-    position: relative;
-    overflow-x: auto;
-    /*white-space: nowrap;*/
-    display: block;
-}
-
-.outer-table table tr:not(:first-of-type) {
-    border-top: 1px solid #bdc3c7;
-}   
-
-.v-top {
-    vertical-align: top;
-}
-
-.table thead {
-    display: table-header-group;
-}
-
-.table.last-row-emphasised tbody tr:last-of-type {
-    border-top: 2px solid black;
-    font-weight: 900;
-}
-
-.table.last-row-emphasised tbody tr:not(:last-of-type) {
-    border-top: 1px solid lightgray;
-}
-
-.table tbody tr td:first-of-type {
-    font-weight: 700;
-}
-
-/*.outer-table > tbody,
-.outer-table > tbody > tr,
-.outer-table > tbody > tr > td {
-    display: block;
-}*/
-
-.outer-table {
-    max-width: 100%;
-    width: 100%;
-    display: block;
-    border-radius: 0.25rem;
-    overflow: clip;
-    margin-bottom: 0.5rem;
-    background-color: #ecf0f1;
-}
-
-td > .flex-apart {
-    margin-top: 0.25rem;
-}
-
-td > .flex-apart:not(:first-of-type) {
-    border-top: 1px solid #bdc3c7;
-    padding-top: 0.25rem;
-}
-
-.note, .plan { padding: 0.25rem 0.5rem 0.5rem 0.5rem; }
-
-/*.activities, .note {
-    margin-bottom: 0.5rem;
-}*/
-
-.note, .plan, .activities {
-    display: block;
-    max-width: 100vw;
-    box-sizing: border-box;
-}
-
-.note p, .plan p {
-    margin: 0.5rem 0 0 0;
-}
-
-/*.note, .plan {
-    width: 100%;
-}*/
-
-.plan { border-bottom: 1px solid #bdc3c7; }
-.note { padding-bottom: 0.5rem; }
-
-.activities {
-    border-bottom: 1px solid #bdc3c7;
-}
-
-.chartContainer {
-    width: 100%;
-    box-sizing: border-box;
-    margin-top: 1rem;
-}
-
-select {
-    margin-top: 1rem;
-}
-
-.navigation-controls {
-    text-align: center;
-}
-
-.navigation-controls .button {
-    margin-top: 0.5rem;
-}
-
-.select select {
-    padding-right: 2.5rem;
-}
-
-.select::after {
-    top: 0.8rem;
-}
-
-h4 {
-    margin-bottom: 0;
-}
-
-/* ^^^ NEW ^^^ */
-
-.fc .fc-event-time,
-.fc .fc-event-title {
-    padding: 0 1px;
-    white-space: normal;
-}
-
-html,
-body {
-    overflow-x: hidden;
-    position: relative;
-    min-height: 100vh;
-}
-
-
-h3 {
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
-.navigation-controls {
-    margin-bottom: 1.5rem;
-}
-
-.alert {
-    display: block;
-    max-width: calc(100% - 1rem);
-    border-radius: 0.25rem;
-    box-shadow: 0px 0px 10px -1px rgba(0,0,0,0.3);
-    -webkit-box-shadow: 0px 0px 10px -1px rgba(0,0,0,0.3);
-    -moz-box-shadow: 0px 0px 10px -1px rgba(0,0,0,0.3);
-    padding: 0.5rem 1rem;
-    margin: 0 auto 1rem auto;
-    width: auto;
-    box-sizing: border-box;
-}
-
-.alert p {
-    margin: 0;
-    display: inline-block;
-}
-
-.alert.success {
-    background-color: rgba(46, 204, 113, 0.1);
-    color: rgba(46, 204, 113);
-}
-
-.alert.info {
-    background-color: rgba(52, 152, 219, 0.1);
-    color: rgba(52, 152, 219);
-}
-
-.alert.warning {
-    background-color: rgba(241, 196, 15, 0.1);
-    color: rgba(241, 196, 15);
-}
-
-.alert.error {
-    background-color: rgba(231, 76, 60, 0.1);
-    color: rgba(231, 76, 60, 1);
-}
-
-.tag {
-    border-radius: 0.25rem;
-    color: black;
-    padding: 0.1rem 0.2rem;
-    font-size: small;
-    display: inline-block;
-    margin: 0.1rem 0 0.25rem 0;
-}
-
-.tag.t1 {
-    background-color: rgba(46, 204, 113);
-    color: white;
-}
-
-.tag.t2 {
-    background-color: rgba(52, 152, 219);
-    color: white;
-}
-
-.tag.t3 {
-    background-color: rgba(241, 196, 15);
-    color: black;
-}
-
-.tag.t4 {
-    background-color: rgba(230, 126, 34, 1);
-    color: black;
-}
-
-.tag.t5 {
-    background-color: rgba(231, 76, 60, 1);
-    color: black;
-}
-
-.button {
-    border-radius: 0.25rem;
-    color: black;
-    padding: 0.25rem 0.5rem;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    display: inline-block;
-    transition: box-shadow 200ms;
-}
-
-.button:hover {
-    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-}
-
-.button.small {
-    font-size: small;
-    padding: 0.1rem 0.25rem;
-}
-
-.button.green {
-    background-color: rgba(46, 204, 113,0.75);
-}
-
-.button.blue {
-    background-color: rgba(52, 152, 219,0.75);
-}
-
-.button.yellow {
-    background-color: rgba(241, 196, 15,0.75)
-}
-
-.button.orange {
-    background-color: rgba(230, 126, 34,0.75);
-}
-
-.button.light-red {
-    background-color: rgba(231, 76, 60, 0.25);
-}
-
-.button.light-green {
-    background-color: rgba(46, 204, 113, 0.25);
-}
-
-.button.light-blue {
-    background-color: rgba(52, 152, 219, 0.25);
-}
-
-.button.light-yellow {
-    background-color: rgba(241, 196, 15, 0.25)
-}
-
-.button.light-orange {
-    background-color: rgba(230, 126, 34, 0.25);
-}
-
-.button.light-red {
-    background-color: rgba(231, 76, 60, 0.25);
-}
-
-
-
-input,
-textarea {
-    width: 100%;
-}
-
-details,
-.Note,
-.Plan {
-    border: 1px solid #f5f6fa;
-}
-
-details {
-    padding: 0.5rem;
-}
-
-details:nth-child(even) {
-    background-color: #f5f6fa;
-}
-
-summary h3 {
-    color: rgba(230, 126, 34, 1.0);
-    display: inline-block;
-}
-
-body h2 {
-    color: #e67e22;
-    font-size: 1.5rem;
-}
-
-h2 {
-    margin: 0;
-}
-
-form h2 {
-    margin-top: 0;
-}
-
-h2+p {
-    font-style: italic;
-    margin-top: -2rem;
-}
-
-h3 {
-    color: #16a085
-}
-
-a {
-    color: #00a8ff;
-    text-decoration: none;
-}
-
-html body {
-    /*padding: 0.5rem;*/
-    /*display: flex;*/
-    /*flex-direction: column;*/
-    /*align-items: center;*/
-    /*justify-content: space-between;*/
-    min-height: 100vh;
-    box-sizing: border-box;
-    /*max-width: 100%;*/
-    max-width: 900px;
-    /*margin: auto;*/
-}
-
-@media (min-width: 800px) {
-    .outer-table > tbody { display: table-row-group; }
-    .outer-table > tbody > tr { display: table-row; }
-    .column-to-row { flex-direction: row; align-items: flex-start; }
-    .outer-table > tbody > tr > td {
-        display: table-cell;
-        vertical-align: top;
-    }
-    .flex-wrap {
-        flex-direction: row;
-    }
-    .flex-apart.static {
-        flex-direction: row;   
-    }
-
-    .chartContainer {
-        width: 50%;
-        margin-top: 0;
-    }
-
-    .activities { padding-left: inherit; }
-    .note, .plan, .activities { display: inherit; }
-
-    .note, .plan { border-right:1px solid #bdc3c7; min-width: 300px; max-width: 300px; }
-    .activities { border: none; display: table-cell; }
-    body { margin:auto; }
-}
+body,html{font-family:-apple-system,BlinkMacSystemFont,avenir next,avenir,segoe ui,helvetica neue,helvetica,Ubuntu,roboto,noto,arial,sans-serif}h1{margin:0}#Map{height:400px;width:100%}header{background-color:#ecf0f1;padding:.5rem}main{margin-top:1rem}table{border-collapse:collapse}thead{padding:.25rem .5rem;background-color:#3c6382;display:block;color:#fff}.overflow-y{position:relative;overflow-y:auto;max-height:400px;width:calc(100% + 7rem)}.table-wrapper{max-width:100%;overflow-x:auto}thead>tr>th{margin:auto;text-align:center;padding:.25rem .5rem}td{vertical-align:middle;padding:0 .5rem}.outer-table>tbody,.outer-table>tbody>tr{display:block}.activities tbody tr td:last-of-type{min-width:45px;max-width:50px}.activities tbody tr td:first-of-type{min-width:100px}.activities tbody tr td:not(:first-of-type):not(:last-of-type){min-width:85px;text-align:center}footer{margin-top:1rem;padding-top:1rem;padding-bottom:1rem;border-top:1px solid #d3d3d3}.activities{padding-left:0}.flex-apart{display:flex;flex-direction:row;justify-content:space-between}.flex-apart.center{align-items:center}.column-to-row{flex-direction:column}.column-to-row,.row-to-column{display:flex;justify-content:space-between;align-items:center}.row-to-column{flex-direction:row;flex-wrap:wrap}.hr-bar{display:flex;flex-direction:row;flex-wrap:nowrap;text-align:center;font-weight:700;color:#fff}.hr-bar div{display:flex;align-items:center;justify-content:center}.hr-bar .Z1{background-color:#3498db}.hr-bar .Z2{background-color:#2ecc71}.hr-bar .Z3{background-color:#fbc531}.hr-bar .Z4{background-color:#e67e22}.hr-bar .Z5{background-color:#e74c3c}.outer-table table{position:relative;overflow-x:auto;display:block}.outer-table table tr:not(:first-of-type){border-top:1px solid #bdc3c7}.v-top{vertical-align:top}.table thead{display:table-header-group}.table.last-row-emphasised tbody tr:last-of-type{border-top:2px solid #000;font-weight:900}.table.last-row-emphasised tbody tr:not(:last-of-type){border-top:1px solid #d3d3d3}.table tbody tr td:first-of-type{font-weight:700}.outer-table{max-width:100%;width:100%;display:block;border-radius:.25rem;overflow:clip;margin-bottom:.5rem;background-color:#ecf0f1}td>.flex-apart{margin-top:.25rem}td>.flex-apart:not(:first-of-type){border-top:1px solid #bdc3c7;padding-top:.25rem}.note,.plan{padding:.25rem .5rem .5rem}.activities,.note,.plan{display:block;max-width:100vw;box-sizing:border-box}.note p,.plan p{margin:.5rem 0 0}.plan{border-bottom:1px solid #bdc3c7}.note{padding-bottom:.5rem}.activities{border-bottom:1px solid #bdc3c7}.chartContainer{width:100%;box-sizing:border-box;margin-top:1rem}.navigation-controls{text-align:center}.navigation-controls .button{margin-top:.5rem}.select select{padding-right:2.5rem}.select:after{top:.8rem}h4{margin-bottom:0}.fc .fc-event-time,.fc .fc-event-title{padding:0 1px;white-space:normal}body,html{overflow-x:hidden;position:relative;min-height:100vh}h3{margin-top:0;margin-bottom:0}.alert{display:block;max-width:calc(100% - 1rem);border-radius:.25rem;box-shadow:0 0 10px -1px rgba(0,0,0,.3);-webkit-box-shadow:0 0 10px -1px rgba(0,0,0,.3);-moz-box-shadow:0 0 10px -1px rgba(0,0,0,.3);padding:.5rem 1rem;margin:0 auto 1rem;width:auto;box-sizing:border-box}.alert p{margin:0;display:inline-block}.alert.success{background-color:rgba(46,204,113,.1);color:#2ecc71}.alert.info{background-color:rgba(52,152,219,.1);color:#3498db}.alert.warning{background-color:rgba(241,196,15,.1);color:#f1c40f}.alert.error{background-color:rgba(231,76,60,.1);color:#e74c3c}.tag{border-radius:.25rem;color:#000;padding:.1rem .2rem;font-size:small;display:inline-block;margin:.1rem 0 .25rem}.tag.t1{background-color:#2ecc71;color:#fff}.tag.t2{background-color:#3498db;color:#fff}.tag.t3{background-color:#f1c40f;color:#000}.tag.t4{background-color:#e67e22;color:#000}.tag.t5{background-color:#e74c3c;color:#000}.button{border-radius:.25rem;color:#000;padding:.25rem .5rem;box-shadow:0 1px 3px rgba(0,0,0,.12),0 1px 2px rgba(0,0,0,.24);display:inline-block;transition:box-shadow .2s}.button:hover{box-shadow:0 2px 2px rgba(0,0,0,.19),0 2px 2px rgba(0,0,0,.23)}.button.small{font-size:small;padding:.1rem .25rem}.button.green{background-color:rgba(46,204,113,.75)}.button.blue{background-color:rgba(52,152,219,.75)}.button.yellow{background-color:rgba(241,196,15,.75)}.button.orange{background-color:rgba(230,126,34,.75)}.button.light-green{background-color:rgba(46,204,113,.25)}.button.light-blue{background-color:rgba(52,152,219,.25)}.button.light-yellow{background-color:rgba(241,196,15,.25)}.button.light-orange{background-color:rgba(230,126,34,.25)}.button.light-red{background-color:rgba(231,76,60,.25)}input,textarea{width:100%}.Note,.Plan,details{border:1px solid #f5f6fa}details{padding:.5rem}details:nth-child(2n){background-color:#f5f6fa}summary h3{color:#e67e22;display:inline-block}body h2{color:#e67e22;font-size:1.5rem}h2{margin:0}form h2{margin-top:0}h2+p{font-style:italic;margin-top:-2rem}h3{color:#16a085}a{color:#00a8ff;text-decoration:none}html body{min-height:100vh;box-sizing:border-box;max-width:900px}@media (min-width:800px){.outer-table>tbody{display:table-row-group}.outer-table>tbody>tr{display:table-row}.column-to-row{flex-direction:row;align-items:center}.outer-table>tbody>tr>td{display:table-cell;vertical-align:top}.flex-apart.static,.flex-wrap{flex-direction:row}.chartContainer{width:50%;margin-top:0}.activities{padding-left:inherit}.activities,.note,.plan{display:inherit}.note,.plan{border-right:1px solid #bdc3c7;min-width:300px;max-width:300px}.activities{border:none;display:table-cell}body{margin:auto}}
