--- a/addons/fitlytics/finnito/fitlytics-theme/resources/css/style.css
+++ b/addons/fitlytics/finnito/fitlytics-theme/resources/css/style.css
@@ -1,79 +1,41 @@
-html, body {
-    font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Ubuntu, roboto, noto, arial, sans-serif;
+:root {
+    --black: rgb(51, 51, 51);
+    --blue: rgba(96, 163, 188, 1.0);
+    --blue-light: rgba(96, 163, 188, 0.25);
+    --green: rgba(46, 204, 113, 1.0);
+    --green-light: rgba(46, 204, 113, 0.25);
+    --yellow: rgba(251, 197, 49, 1.0);
+    --yellow-light: rgba(251, 197, 49, 0.25);
+    --orange: rgba(230, 126, 34, 1.0);
+    --orange-light: rgba(230, 126, 34, 0.25);
+    --red: rgba(231, 76, 60, 1.0);
+    --red-light: rgba(231, 76, 60, 0.25);
 }
 
-h1 {
+/*
+ * Base Styles
+ * Typography
+ */
+html, body {
+    font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Ubuntu, roboto, noto, arial, sans-serif;
+    color: var(--black);
+}
+
+body {
+    min-height: 100vh;
+    box-sizing: border-box;
+    max-width: 900px;
     margin: 0;
 }
 
-#Map {
-    height: 400px;
-    width: 100%;
-}
-
 header {
-    background-color: rgba(236, 240, 241,1.0);
+    background-color: rgba(236, 240, 241, 1.0);
     padding: 0.5rem;
 }
 
 main {
     margin-top: 1rem;
-}
-
-table {
-    border-collapse: collapse;
-}
-
-thead {
-    /*margin: 1rem auto 0 auto;*/
-    padding: 0.25rem 0.5rem;
-    background-color: rgba(60, 99, 130,1.0);
-    display: block;
-    color: white;
-    /*border-radius: 0.25rem;*/
-}
-
-.overflow-y {
-    position: relative;
-    overflow-y: auto;
-    max-height: 400px;
-    width: calc(100% + 7rem);
-}
-
-.table-wrapper {
-    max-width: 100%;
-    overflow-x: auto;
-}
-
-thead > tr > th {
-    margin: auto;
-    text-align: center;
-    padding: 0.25rem 0.5rem;
-}
-
-td { vertical-align: middle; }
-
-td {
-    padding: 0 0.5rem;
-}
-
-.outer-table > tbody,
-.outer-table > tbody > tr {
-    display: block;
-}
-
-.activities tbody tr td:last-of-type {
-    min-width: 45px;
-    max-width: 50px;
-}
-
-.activities tbody tr td:first-of-type {
-    min-width: 100px;
-}
-
-.activities tbody tr td:not(:first-of-type):not(:last-of-type) {
-    min-width: 85px;
-    text-align: center;
+    padding: 0 0.25rem;
 }
 
 footer {
@@ -83,21 +45,35 @@ footer {
     border-top: 1px solid lightgray;
 }
 
-.activities {
-    padding-left: 0;
+h1, h2 {
+    margin: 0;
 }
 
+a {
+    color: var(--blue);
+    text-decoration: none;
+}
+
+/**
+ * TABLES
+ **/
+thead { text-align: left; }
+td:not(last-of-type) { padding-right: 0.25rem; }
+
+
+/**
+ * LAYOUTS
+ **/
 .flex-apart {
+    gap: 1rem;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-}
-
-.flex-apart.center {
-    align-items: center;
+    flex-wrap: wrap;
 }
 
 .column-to-row {
+    gap: 1rem;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
@@ -105,11 +81,124 @@ footer {
 }
 
 .row-to-column {
+    gap: 1rem;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
     align-items: center;
     flex-wrap: wrap;
+}
+
+.center {
+    align-items: center;
+}
+
+.chartContainer { max-width: 100%; }
+
+@media (min-width: 800px) {
+    .column-to-row { flex-direction: row; }
+    .row-to-column { flex-direction: column; }
+}
+
+
+/*
+ * Home Page
+ */
+.DayGrid {
+    border-radius: 0.25rem;
+    overflow: hidden;
+    border: 1px solid var(--blue);
+    margin-bottom: 0.25rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 0.1fr auto auto;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+    "Date Date Date"
+    "Plan Plan Plan"
+    "Note Note Note"
+    "Activities Activities Activities";
+}
+@media (min-width: 800px) {
+    .DayGrid {
+        grid-template-areas:
+            "Date Date Date"
+            "Plan Activities Activities"
+            "Note Activities Activities";
+    }
+    .Plan,.Note { border-right: 1px solid var(--blue); }
+}
+
+.Date {
+    grid-area: Date;
+    grid-area: Date;
+    font-weight: 900;
+    color: var(--black);
+    background-color: var(--blue);
+    padding: 0.25rem;
+}
+.Plan { grid-area: Plan; }
+.Note { grid-area: Note; }
+.Activities { grid-area: Activities; overflow-x: auto; }
+.Plan,.Note,.Activities { padding: 0.25rem; }
+.Note p { margin: auto auto 0 auto; }
+
+.ActivityGrid {  display: grid;
+  grid-template-columns: 3fr repeat(5, 5rem);
+  grid-template-rows: auto auto;
+  gap: 3px 10px;
+  grid-auto-flow: row;
+  grid-template-areas:
+    "Name Stat1 Stat3 Stat5 Stat7 Actions"
+    "Name Stat2 Stat4 Stat5 Stat8 Actions";
+}
+.ActivityGrid:not(:last-of-type) { border-bottom: 1px solid var(--blue); }
+.Name {
+    grid-area: Name;
+    width: 100px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+.Stat1 { grid-area: Stat1; }
+.Stat2 { grid-area: Stat2; }
+.Stat3 { grid-area: Stat3; }
+.Stat4 { grid-area: Stat4; }
+.Stat5 { grid-area: Stat5; }
+.Stat6 { grid-area: Stat6; }
+.Stat7 { grid-area: Stat7; }
+.Stat8 { grid-area: Stat8; }
+.Actions {
+    grid-area: Actions;
+    align-self: center;
+    justify-self: center;
+}
+
+@media (min-width: 800px) {
+    .Name { width: unset; max-width: 100%; }
+    .ActivityGrid { padding-bottom: 0.1rem; gap: 0px 0px; }
+}
+
+
+/* 
+ * Activity Page
+ */
+.laps-and-map {
+    display: flex;
+    flex-direction: column;
+}
+
+.laps-container {
+    max-height: 400px;
+    position: relative;
+    overflow-y: auto;
+    overflow-x: auto;
+}
+
+#Map {
+    height: 400px;
+    width: 100%;
 }
 
 .hr-bar {
@@ -119,6 +208,7 @@ footer {
     text-align: center;
     font-weight: 700;
     color: white;
+    font-size: 0.75rem;
 }
 
 .hr-bar div {
@@ -128,196 +218,36 @@ footer {
 }
 
 .hr-bar .Z1 {
-    background-color: rgba(52, 152, 219, 1);
+    background-color: var(--blue);
 }
 
 .hr-bar .Z2 {
-    background-color: rgba(46, 204, 113, 1);
+    background-color: var(--green);
 }
 
 .hr-bar .Z3 {
-    background-color: rgba(251, 197, 49, 1);
+    background-color: var(--yellow);
 }
 
 .hr-bar .Z4 {
-    background-color: rgba(230, 126, 34, 1);
+    background-color: var(--orange);
 }
 
 .hr-bar .Z5 {
-    background-color: rgba(231, 76, 60, 1);
+    background-color: var(--red);
 }
 
-/*td:first-of-type { padding-right: 0.5rem; }*/
-
-.outer-table table {
-    position: relative;
-    overflow-x: auto;
-    /*white-space: nowrap;*/
-    display: block;
+@media (min-width: 800px) {
+    .laps-and-map {
+        flex-direction: row;
+        max-height: 400px;
+    }
+    .laps-container { width: -webkit-fill-available; }
 }
 
-.outer-table table tr:not(:first-of-type) {
-    border-top: 1px solid #bdc3c7;
-}   
-
-.v-top {
-    vertical-align: top;
-}
-
-.table thead {
-    display: table-header-group;
-}
-
-.table.last-row-emphasised tbody tr:last-of-type {
-    border-top: 2px solid black;
-    font-weight: 900;
-}
-
-.table.last-row-emphasised tbody tr:not(:last-of-type) {
-    border-top: 1px solid lightgray;
-}
-
-.table tbody tr td:first-of-type {
-    font-weight: 700;
-}
-
-/*.outer-table > tbody,
-.outer-table > tbody > tr,
-.outer-table > tbody > tr > td {
-    display: block;
-}*/
-
-.outer-table {
-    max-width: 100%;
-    width: 100%;
-    display: block;
-    border-radius: 0.25rem;
-    overflow: clip;
-    margin-bottom: 0.5rem;
-    background-color: #ecf0f1;
-}
-
-td > .flex-apart {
-    margin-top: 0.25rem;
-}
-
-td > .flex-apart:not(:first-of-type) {
-    border-top: 1px solid #bdc3c7;
-    padding-top: 0.25rem;
-}
-
-.note, .plan { padding: 0.25rem 0.5rem 0.5rem 0.5rem; }
-
-/*.activities, .note {
-    margin-bottom: 0.5rem;
-}*/
-
-.note, .plan, .activities {
-    display: block;
-    max-width: 100vw;
-    box-sizing: border-box;
-}
-
-.note p, .plan p {
-    margin: 0.5rem 0 0 0;
-}
-
-/*.note, .plan {
-    width: 100%;
-}*/
-
-.plan { border-bottom: 1px solid #bdc3c7; }
-.note { padding-bottom: 0.5rem; }
-
-.activities {
-    border-bottom: 1px solid #bdc3c7;
-}
-
-.chartContainer {
-    width: 100%;
-    box-sizing: border-box;
-    margin-top: 1rem;
-}
-
-.navigation-controls {
-    text-align: center;
-}
-
-.navigation-controls .button {
-    margin-top: 0.5rem;
-}
-
-.select select {
-    padding-right: 2.5rem;
-}
-
-.select::after {
-    top: 0.8rem;
-}
-
-h4 {
-    margin-bottom: 0;
-}
-
-/* ^^^ NEW ^^^ */
-
-.fc .fc-event-time,
-.fc .fc-event-title {
-    padding: 0 1px;
-    white-space: normal;
-}
-
-html,
-body {
-    overflow-x: hidden;
-    position: relative;
-    min-height: 100vh;
-}
-
-
-h3 {
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
-.alert {
-    display: block;
-    max-width: calc(100% - 1rem);
-    border-radius: 0.25rem;
-    box-shadow: 0px 0px 10px -1px rgba(0,0,0,0.3);
-    -webkit-box-shadow: 0px 0px 10px -1px rgba(0,0,0,0.3);
-    -moz-box-shadow: 0px 0px 10px -1px rgba(0,0,0,0.3);
-    padding: 0.5rem 1rem;
-    margin: 0 auto 1rem auto;
-    width: auto;
-    box-sizing: border-box;
-}
-
-.alert p {
-    margin: 0;
-    display: inline-block;
-}
-
-.alert.success {
-    background-color: rgba(46, 204, 113, 0.1);
-    color: rgba(46, 204, 113);
-}
-
-.alert.info {
-    background-color: rgba(52, 152, 219, 0.1);
-    color: rgba(52, 152, 219);
-}
-
-.alert.warning {
-    background-color: rgba(241, 196, 15, 0.1);
-    color: rgba(241, 196, 15);
-}
-
-.alert.error {
-    background-color: rgba(231, 76, 60, 0.1);
-    color: rgba(231, 76, 60, 1);
-}
-
+/**
+ * TAGS
+ **/
 .tag {
     border-radius: 0.25rem;
     color: black;
@@ -328,162 +258,51 @@ h3 {
 }
 
 .tag.t1 {
-    background-color: rgba(46, 204, 113);
+    background-color: var(--green);
     color: white;
 }
 
 .tag.t2 {
-    background-color: rgba(52, 152, 219);
+    background-color: var(--blue);
     color: white;
 }
 
 .tag.t3 {
-    background-color: rgba(241, 196, 15);
+    background-color: var(--yellow);
     color: black;
 }
 
 .tag.t4 {
-    background-color: rgba(230, 126, 34, 1);
+    background-color: var(--orange);
     color: black;
 }
 
 .tag.t5 {
-    background-color: rgba(231, 76, 60, 1);
+    background-color: var(--red);
     color: black;
 }
 
-.button {
+/**
+ * ALERTS
+ **/
+.alert {
+    display: block;
+    max-width: calc(100% - 1rem);
     border-radius: 0.25rem;
-    color: black;
-    padding: 0.25rem 0.5rem;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    display: inline-block;
-    transition: box-shadow 200ms;
-}
-
-.button:hover {
-    box-shadow: 0 2px 2px rgba(0,0,0,0.19), 0 2px 2px rgba(0,0,0,0.23);
-}
-
-.button.small {
-    font-size: small;
-    padding: 0.1rem 0.25rem;
-}
-
-.button.green {
-    background-color: rgba(46, 204, 113,0.75);
-}
-
-.button.blue {
-    background-color: rgba(52, 152, 219,0.75);
-}
-
-.button.yellow {
-    background-color: rgba(241, 196, 15,0.75)
-}
-
-.button.orange {
-    background-color: rgba(230, 126, 34,0.75);
-}
-
-.button.light-red {
-    background-color: rgba(231, 76, 60, 0.25);
-}
-
-.button.light-green {
-    background-color: rgba(46, 204, 113, 0.25);
-}
-
-.button.light-blue {
-    background-color: rgba(52, 152, 219, 0.25);
-}
-
-.button.light-yellow {
-    background-color: rgba(241, 196, 15, 0.25)
-}
-
-.button.light-orange {
-    background-color: rgba(230, 126, 34, 0.25);
-}
-
-.button.light-red {
-    background-color: rgba(231, 76, 60, 0.25);
-}
-
-
-
-input,
-textarea {
-    width: 100%;
-}
-
-details,
-.Note,
-.Plan {
-    border: 1px solid #f5f6fa;
-}
-
-details {
-    padding: 0.5rem;
-}
-
-details:nth-child(even) {
-    background-color: #f5f6fa;
-}
-
-summary h3 {
-    color: rgba(230, 126, 34, 1.0);
-    display: inline-block;
-}
-
-body h2 {
-    color: #e67e22;
-    font-size: 1.5rem;
-}
-
-h2 {
-    margin: 0;
-}
-
-form h2 {
-    margin-top: 0;
-}
-
-h2+p {
-    font-style: italic;
-    margin-top: -2rem;
-}
-
-h3 {
-    color: #16a085
-}
-
-a {
-    color: #00a8ff;
-    text-decoration: none;
-}
-
-html body {
-    /*padding: 0.5rem;*/
-    /*display: flex;*/
-    /*flex-direction: column;*/
-    /*align-items: center;*/
-    /*justify-content: space-between;*/
-    min-height: 100vh;
+    padding: 0.5rem 1rem;
+    margin: 0 auto 1rem auto;
+    width: auto;
     box-sizing: border-box;
-    /*max-width: 100%;*/
-    max-width: 900px;
-    /*margin: auto;*/
+}
+
+.alert p {
+    margin: 0;
+    display: inline-block;
+    background-color: var(--yellow-light);
 }
 
 @media (min-width: 800px) {
-    .outer-table > tbody { display: table-row-group; }
-    .outer-table > tbody > tr { display: table-row; }
     .column-to-row { flex-direction: row; align-items: center; }
-    .outer-table > tbody > tr > td {
-        display: table-cell;
-        vertical-align: top;
-    }
     .flex-wrap {
         flex-direction: row;
     }
@@ -495,11 +314,5 @@ html body {
         width: 50%;
         margin-top: 0;
     }
-
-    .activities { padding-left: inherit; }
-    .note, .plan, .activities { display: inherit; }
-
-    .note, .plan { border-right:1px solid #bdc3c7; min-width: 300px; max-width: 300px; }
-    .activities { border: none; display: table-cell; }
     body { margin:auto; }
 }
