--- a/addons/fitlytics/finnito/fitlytics-module/resources/views/pages/activity.twig
+++ b/addons/fitlytics/finnito/fitlytics-module/resources/views/pages/activity.twig
@@ -128,6 +128,7 @@
             options: {
                 parsing: false,
                 responsive: true,
+                aspectRatio: 1.5,
                 scales: {
                     x: {
                         type: 'linear',
